src/App.css
@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');

*{
  margin: 0 auto;
  overflow: hidden;
}

.App {
  height: 100vh;
  width: 100vw;
  overflow-x: scroll;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.navBar{
  display: inline-flex;
  flex-direction: row;
  width: 100vw;
  height: 10vh;
  position: fixed;
  z-index: 10;
}

.decorativeDiv{
  background-color: navy;
  position: absolute;
  display: inline-flex;
  flex-direction: row;
  margin-left: 52vw;
  width: 70vw;
  height: 100vh;
  z-index: 10;
  transform: skew(31deg);
  overflow-x: hidden;
}

.logo{
  margin-left: 10vw;
  margin-top: 2vh;
  background-image: url("./charleslamb3264.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 100%;
  height: 62px;
  width: 260px;
}

.navOptions{
  display: inline-flex;
  flex-direction: row;
  margin-left: 7vw;
  margin-top: 3vh;
}

.home{
  color: white;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;
  border-right: solid rgb(134, 193, 212);
  padding-right: 1vw;
}

.portfolio{
  margin-left: 1vw;
  color: white;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;
  border-right: solid rgb(134, 193, 212);
  padding-right: 1vw;
}

.lamb{
  margin-left: 1vw;
  color: white;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;
  border-right: solid rgb(134, 193, 212);
  padding-right: 1vw;
}

.causes{
  margin-left: 1vw;
  color: white;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;
  border-right: solid rgb(134, 193, 212);
  padding-right: 1vw;
}

.about{
  margin-left: 1vw;
  color: white;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;
  border-right: solid rgb(134, 193, 212);
  padding-right: 1vw;
}

.journal{
  margin-left: 1vw;
  color: white;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;

}

.home:hover{
  color: orange;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;
  border-right: solid rgb(134, 193, 212);
  padding-right: 1vw;
}

.portfolio:hover{
  margin-left: 1vw;
  color: orange;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;
  border-right: solid rgb(134, 193, 212);
  padding-right: 1vw;
}

.lamb:hover{
  margin-left: 1vw;
  color: orange;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;
  border-right: solid rgb(134, 193, 212);
  padding-right: 1vw;
}

.causes:hover{
  margin-left: 1vw;
  color: orange;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;
  border-right: solid rgb(134, 193, 212);
  padding-right: 1vw;
}

.about:hover{
  margin-left: 1vw;
  color: orange;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;
  border-right: solid rgb(134, 193, 212);
  padding-right: 1vw;
}

.journal:hover{
  margin-left: 1vw;
  color: orange;
  font-family: 'Indie Flower', cursive;
  font-size: 28px;
  font-weight: bolder;
  z-index: 10;

}

.leftFoldSection{
  display: inline-flex;
  flex-direction: row;
  margin-top: 180px;
  margin-left: 30px;
  width: 40vw;
  height: 50vh;
  overflow: visible;
}

.socialMediaButtons{
  width: 100px;
  height: 200px;
  background: white;
  border-radius: 100px / 50px;
  left: 1px;
  position: absolute;
  overflow: visible;
}

.greeting{
  height: 8vh;
  width: 20vw;
  margin-top: 2rem;
  margin-left: 9.7vw;
  font-family: 'Indie Flower', cursive;
  font-size: 40px;
  font-weight: bolder;
  color: navy;
  position: absolute;
}

.name{
  height: 8vh;
  width: 20vw;
  margin-top: 6rem;
  margin-left: 9.6vw;
  font-family: 'Indie Flower', cursive;
  font-size: 40px;
  font-weight: bolder;
}

.topSlogan{
  height: 5vh;
  width: 30vw;
  margin-top: 10rem;
  margin-left: 9.9vw;
  position: absolute;
}

.bottomSlogan{
  height: 5vh;
  width: 30vw;
  margin-top: 13rem;
  margin-left: 9.9vw;
  position: absolute;
}

.buttons{
  height: 6.5vh;
  width: 30vw;
  margin-top: 16.2rem;
  margin-left: 9.9vw;
  position: absolute;
  display: inline-flex;
  flex-direction: row;
  overflow:visible
}

.portfolioButton{
  background-color: navy;
  color: white;
  font-weight: bold;
  border-radius: 5px;
  width: 120px;
  height: 50px;
  border: solid navy;
}

.contactButton{
  background-color: rgb(250, 178, 43);
  color: white;
  font-weight: bolder;
  margin-left: 3vw;
  border-radius: 5px;
  width: 120px;
  height: 50px;
  border: solid orange;
}

.rightFoldSection{
  display: inline-flex;
  flex-direction: row;
  background-image: url('./_DPL1167-removebg-preview.png');
  background-repeat: no-repeat;
  margin-top: 126px;
  margin-left: 20vw;
  width: 30vw;
  height: 80vh;
  z-index: 11;
  position: absolute;
}

.skewedBackgroundDecoration{
  background-color: rgb(250, 178, 43);
  display: inline-flex;
  flex-direction: row;
  margin-top: 190px;
  margin-left: 4vw;
  width: 60vw;
  height: 50vh;
  z-index: 10;
  position: absolute;
  transform: skew(25deg, 10deg);
}

a {
  text-decoration: none;
  color: #fff;
}
p > a:hover{
  color: #d9d9d9;
  text-decoration:  underline;
}

._14 {
  font-size: 1.4em;
}

.footer-social-icons {
  height: 350px;
  display:block;
  margin-right: 2px;
  position: absolute;

}
.social-icon {
  color: #fff;
}
ul.social-icons {
  margin-top: 10px;
}
.social-icons li {
  vertical-align: top;
  display: inline;
  height: 100px;
}
.social-icons a {
  color: #fff;
  text-decoration: none;
}

.fa-twitter {
  padding:10px 12px;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
  transition: .5s;
  background-color: #322f30;
}
.fa-twitter:hover {
  background-color: #00aced;
}

.fa-youtube {
  padding:10px 14px;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
  transition: .5s;
  background-color: #322f30;
}
.fa-youtube:hover {
  background-color: #e64a41;
}
.fa-linkedin {
  padding:10px 14px;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
  transition: .5s;
  background-color: #322f30;
}
.fa-linkedin:hover {
  background-color: #0073a4;
}
.fa-github {
  padding:10px 14px;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
  transition: .5s;
  background-color: #322f30;
}
.fa-github:hover {
  background-color: #5a32a3;
}

